# python-surveyjs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  shell.nix
.github/workflows/: unittests.yml
surveyjs/: __init__.py  creator.py  form.py  page.py  survey_creator.py  text.py
surveyjs/elements/: __init__.py  boolean.py  buttongroup.py  checkbox.py  column.py  comment.py  dropdown.py  element.py  expression.py  file.py  html.py  image.py  imagepicker.py  inputtype.py  layout.py  matrix.py  matrixdropdown.py  matrixdynamic.py  multipletext.py  nonvalue.py  panel.py  paneldynamic.py  question.py  radiogroup.py  ranking.py  rating.py  signaturepad.py  slider.py  tagbox.py  text.py  validators.py
surveyjs/questions/: boolean_q.py  checkbox.py  comment.py  dropdown.py  expression_q.py  file.py  html.py  image.py  imagepicker.py  matrix.py  matrixdropdown.py  matrixdynamic.py  multipletext.py  nonvalue.py  panel.py  paneldynamic.py  question.py  radiogroup.py  ranking.py  rating.py  signaturepad.py  tagbox.py  text.py
tests/: __init__.py  test_element_class_mapping.py  test_element_path.py  test_form.py  test_input_type.py  test_matrix_column.py  test_nested_questions.py  test_page.py  test_panel_instances.py  test_question_boolean.py  test_question_buttongroup.py  test_question_checkbox.py  test_question_comment.py  test_question_dropdown.py  test_question_expression.py  test_question_file.py  test_question_html.py  test_question_image.py  test_question_imagepicker.py  test_question_matrix.py  test_question_matrixdropdown.py  test_question_matrixdynamic.py  test_question_multipletext.py  test_question_panel.py  test_question_paneldynamic.py  test_question_radiogroup.py  test_question_ranking.py  test_question_rating.py  test_question_signaturepad.py  test_question_slider.py  test_question_tagbox.py  test_question_text.py  test_readme_examples.py  test_start_with_new_line.py  test_survey.py  test_text_piping.py  test_validation_errors.py  utils.py
tests/data/: test_survey_form.json  test_survey_schema.json
