[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surveyjs"
version = "0.2.8"
description = "Python API for SurveyJS Creator (Form Builder) and Form (response, submission) JSON data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Bob Leers", email = "bob@novacode.nl"}
]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema"
]

[project.urls]
Homepage = "https://github.com/novacode-nl/python-surveyjs"

[tool.setuptools.packages.find]
include = ["surveyjs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
