[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surveyjs"
version = "0.2.9"
description = "Python API for SurveyJS Creator (Form Builder) JSON schema and Form response JSON."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Nova Code BV", email = "contact@novaforms.io"}
]
maintainers = [
    {name = "Bob Leers"},
    {name = "Nova Code BV", email = "contact@novaforms.io"}
]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema"
]

[project.urls]
Homepage = "https://www.novaforms.io"
Repository = "https://github.com/novacode-nl/python-surveyjs"
Changelog = "https://github.com/novacode-nl/python-surveyjs/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["surveyjs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
